<resources>

    <string name="app_name">SEHATY</string>

    <!--           navigation bottom-->
    <string name="nav_home">Home</string>
    <string name="nav_appoitments">Appoitments</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!--         Login activity-->
    <string name="title_login">SIGN IN</string>
    <string name="txt_password">Password:</string>
    <string name="txt_forgot_password">Forgot The Password?</string>
    <string name="txt_sign_in"><u>SIGN UP</u></string>
    <string name="btn_login">SIGN IN</string>


    <!--    Forgot password activity-->
    <string name="title_forgot_password_title">FORGOT PASSWORD</string>
    <string name="btn_send">SEND</string>


    <!--           OTP activity-->
    <string name="title_your_otp">ENTER YOUR OTP</string>
    <string name="txt_recover_paass">To Recover The Password,\nPlease Enter The Code Sent\nTo The Phone Number</string>

    <!--     Home fragment -->
    <string name="title_home">HOME</string>
    <string name="txt_our_service">Our Services</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_clinics">Clinics</string>
    <string name="txt_best_doctor">Best Doctors</string>
    <string name="txt_appointment_booking">Appointment Booking</string>
    <string name="txt_consultation">Consultation</string>
    <string name="txt_view_all"><u>view all</u></string>


    <!--    Add clinic fragment-->
    <string name="title_add_clinic">ADD CLINIC</string>
    <string name="txt_clinic_name">Clinic Name:</string>
    <string name="txt_clinic_administrator">Clinic Administrator Name:</string>
    <string name="txt_email">E_Mail:</string>
    <string name="txt_address">Address:</string>
    <string name="txt_phone">Phone:</string>
    <string name="txt_telephone">Telephone:</string>
    <string name="txt_legal_papers">Legal Papers:</string>
    <string name="txt_your_image">your image</string>
    <string name="btn_add">Add</string>


    <!--    Appointments fragment-->
    <string name="title_appointments">MY APPOINTMENTS</string>
    <string name="txt_empty_data">There Are No Details For This Date \n Try Again Without Time</string>


    <!--       view all clinics fragment-->
    <string name="title_clinics">CLINICS</string>

    <!--           Booking2 fragment-->
    <string name="title_booking">Booking</string>
    <string name="txt_btn_evening">Evening</string>
    <string name="txt_btn_morning">Morning</string>
    <string name="lbl_booking_date">Booking date</string>
    <string name="txt_btn_ok">ok</string>

    <!--    consultation fragment-->
    <string name="title_consultation">CONSULTATION</string>
    <string name="txt_question">QUESTION</string>
    <string name="txt_write_question">Write Your Question</string>
    <string name="txt_attach_picture">You Can Attach A Picture</string>
    <string name="txt_doctor_answer">Doctor\'s Answer</string>
    <string name="txt_your_answer">Write Your Answer</string>

    <!--       profile fragment -->
    <string name="title_profile">PROFILE</string>
    <string name="txt_name">Name:</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter E-Mail</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_phone">Enter Phone</string>

    <!--         Notifications fragment-->
    <string name="title_notificationS">NOTIFICATIONS</string>


    <!--            Settings fragment-->
    <string name="title_settings">SETTINGS</string>
    <string name="txt_language">Language</string>
    <string name="txt_english">English (United Kingdom)</string>
    <string name="txt_arabic">Arabic (Saudi Arabia)</string>
    <string name="txt_logout">Log Out</string>

    <!--      map fragment-->
    <string name="title_location">LOCATION</string>
    <string name="txt_time">TIME</string>
    <string name="txt_distance">DISTANCE</string>
    <string name="txt_method">METHOD</string>


    <!--    create account activity-->
    <string name="title_create_account">CREATE ACCOUNT</string>
    <string name="txt_first_name">First Name:</string>
    <string name="txt_last_name">Last Name:</string>
    <string name="txt_btn_register">Register</string>


    <!--    doctor details fragment   -->
    <string name="txt_patient">Patient</string>
    <string name="txt_education_degree">Education Degree</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_work_place">Workplace</string>
    <string name="btn_book_appointment">Appointment Booking</string>


    <string name="txt_booking">Booking</string>
    <string name="txt_doctors">Doctors</string>
    <string name="txt_departments">Departments</string>
    <string name="archieve">Archieve</string>

    <string name="txt_add_department">Add Department</string>
    <string name="txt_enter_department_details">Enter department details</string>
    <string name="department_name">Department Name:</string>
    <string name="txt_doctor">Doctor</string>
    <string name="txt_clinic_admin">Clinic Administrator</string>
    <string name="txt_login_as">Login As ..</string>
    <string name="nav_clinics">Clinics</string>
    <string name="txt_doctors_filter">Doctors Filter</string>
    <string name="txt_center_name">Center Name:</string>
    <string name="txt_department_name">Department Name:</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_welcome">WELCOME</string>
    <string name="txt_in">IN</string>
    <string name="txt_about_app">The Application Of The Best Clinics And Their Doctors To Make It Easier You To Book An Appointment</string>
    <string name="txt_centers">Centers</string>
    <string name="hint_password">Enter Password</string>
    <string name="txt_save">save</string>
    <string name="txt_archive">Archive</string>
    <string name="txt_patient_list">Patient List</string>

    <string-array name="centers_names">
        <item>ACenter</item>
        <item>BCenter</item>
        <item>CCenter</item>
        <item>DCenter</item>
    </string-array>

    <string-array name="clinics_names">
        <item>Dental Clinic</item>
        <item>Ortho Clinic</item>
        <item>AH Clinic</item>
        <item>DC Clinic</item>
    </string-array>

    <string-array name="departments_names">
        <item>Cardio</item>
        <item>Ortho</item>
        <item>Dental</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_review">Review</string>
    <string name="treatment">Treatment</string>
    <string name="medical_diagnosis">Medical Diagnosis</string>
    <string name="txt_patient_name">Patient Name:</string>
    <string name="doctors_name">Doctor Name:</string>
    <string name="txt_appointment_details">Appointement Details</string>
    <string name="review">review</string>
    <string name="txt_new">new</string>
    <string name="title_my_appintment">my appointments</string>
    <string name="appointmentDoctor">appointmentDoctor</string>
    <string name="txt_age">Age:</string>
    <string name="txt_specialization_department">Specialization Department:</string>
    <string name="nav_setting">setting</string>
</resources>