<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btn_home"
        android:title="@string/nav_home"
        android:icon="@drawable/home"
        android:enabled="true"
        />
    <item
        android:id="@+id/btn_appoitments"
        android:title="@string/nav_appoitments"
        android:icon="@drawable/user_date_calendar_icon"
        android:enabled="true"
        /><item
    android:id="@+id/btn_notifications"
    android:title="@string/nav_notifications"
    android:icon="@drawable/notification_alert_icon"
    android:enabled="true"
    /><item
    android:id="@+id/btn_profile"
    android:title="@string/nav_profile"
    android:icon="@drawable/ic_account_circle_24px"
    android:enabled="true"
    />

</menu>