<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/nav_home">
    <fragment android:id="@+id/nav_home"
        android:name="com.suhail.clinicapp.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_appotiments"
        android:name="com.suhail.clinicapp.ui.fragments.AppoitmentsFragment"
        android:label="@string/nav_appoitments"
        tools:layout="@layout/fragment_appoitments"/>

    <fragment android:id="@+id/nav_notifications"
        android:name="com.suhail.clinicapp.ui.fragments.NotificationsFragment"
        android:label="@string/nav_notifications"
        tools:layout="@layout/fragment_notifications"/>

    <fragment android:id="@+id/nav_profile"
        android:name="com.suhail.clinicapp.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>