<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_shape"
    android:id="@+id/ll_root"
    >
    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="#1C95C0"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        android:text="@string/txt_doctors_filter"
        android:textColor="#1C95C0"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#042D3B"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        android:text="@string/txt_center_name"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp">
        <Spinner
            android:id="@+id/sp_centers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_icon_selector"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#042D3B"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        android:text="@string/txt_clinic_name"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp">
        <Spinner
            android:id="@+id/sp_clinics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_icon_selector"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#042D3B"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        android:text="@string/txt_department_name"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp">
        <Spinner
            android:id="@+id/sp_departments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_icon_selector"
            />

    </androidx.cardview.widget.CardView>
<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btn_filter"
    style="@style/style_btn_clicked"
    android:text="@string/txt_filter"
    android:layout_marginHorizontal="@dimen/_30sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginBottom="@dimen/_30sdp"/>
</LinearLayout>