<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/root_color">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_8sdp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/btn_doctors"
        android:src="@drawable/doctors"
        android:scaleType="centerCrop"
        android:foreground="#751C95C0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        android:textColor="#F5F5F5"
        android:layout_gravity="center"
        android:text="@string/txt_doctors"/>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_departments"
            android:src="@drawable/departments"
            android:scaleType="centerCrop"
            android:foreground="#751C95C0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="30sp"
            android:textColor="#F5F5F5"
            android:layout_gravity="center"
            android:text="@string/txt_departments"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_archieve"
            android:src="@drawable/archieve"
            android:scaleType="centerCrop"
            android:foreground="#751C95C0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="30sp"
            android:textColor="#F5F5F5"
            android:layout_gravity="center"
            android:text="@string/archieve"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>